--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>My Account Page</h1> <br>
 
-<% @user.each do |user| %>
+<% @users.each do |user| %>
   <%= user.first_name %> <br>
   <%= user.last_name %> <br>
   <%= user.email %> <br>
