--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
   </head>
 
   <body>
+  
+  <section>
+    <%= render 'layouts/header' %>
+  </section>
+
   <div>
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
@@ -32,13 +37,11 @@
       <%= link_to "Login", new_user_session_path %>
     <% end %>
   </div>
-  
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>  
 
     <%= yield %>
 
-    
     <%= javascript_include_tag "application" %>
   </body>
 </html>
