--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,28 @@
 <h1>My Account Page</h1> <br>
 
+<div class="small-6 columns">
+  <h2>Total Due to Me</h2>
+</div>
+<div class="small-6 columns">
+  <h2>Total I Owe</h2>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 <% @users.each do |user| %>
   <%= user.first_name %> <br>
   <%= user.last_name %> <br>
   <%= user.email %> <br>
   <%= user.zip %>
   <% end %>
+
+
+
