--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,36 +1,46 @@
-<nav class="top-bar" data-topbar>
-  <ul class="title-area">
-    <li class="name">
-
-      <% if user_signed_in? %>
-      <h1><a href="#"><%= current_user.email %></a></h1>
-
-    </li>
-    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
-  </ul>
-
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
-      <li class="active"><a href="#">Right Button Active</a></li>
-      <li class="has-dropdown">
-        <a href="#">Right Button with Dropdown</a>
-        <ul class="dropdown">
-          <li><a href="#">First link in dropdown</a></li>
-        </ul>
+<div class="sticky">
+  <nav class="top-bar" data-topbar>
+    <ul class="title-area">
+      <li class="name">
+        <% if user_signed_in? %>
+        <h1><a href="/users">My Account</a></h1>
       </li>
+      <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
     </ul>
 
-    <!-- Left Nav Section -->
-    <ul class="left">
-      <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
-      <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-        <% else %>
-      <li><%= link_to "Sign up", new_user_registration_path %></li>
-      <li><%= link_to "Login", new_user_session_path %></li>
-        
-    </ul>
-    <% end %>  
-  </section>
-</nav>
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li class="has-dropdown">
+          <a href="#">Contacts</a>
+          <ul class="dropdown">
+            <li><a href="#">Create New</a></li>
+            <li><a href="#">View History</a></li>
+          </ul>
+        </li>
+        <li class="has-dropdown">
+          <a href="#">IOUs</a>
+          <ul class="dropdown">
+            <li><a href="#">Create New</a></li>
+            <li><a href="#">View History</a></li>
+          </ul>
+        </li>
+      </ul>
+
+      <!-- Left Nav Section -->
+      <ul class="left">
+        <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+        <li><%= link_to "Sign up", new_user_registration_path %></li>
+        <li><%= link_to "Login", new_user_session_path %></li>
+          <% end %> 
+      </ul>
       
+    </section>
+  </nav>
+
+<% if user_signed_in? %>
+<h5>Logged in as: <a href="/users"><%= current_user.email %></a></h5>
+<% end %>
+</div>
