--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,30 @@
   <nav class="top-bar" data-topbar>
     <ul class="title-area">
       <li class="name">
-        <% if user_signed_in? %>
-        <h1><a href="/users">My Account</a></h1>
+        
+        <h1><a href="/users">SettleUp</a></h1>
       </li>
       <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
     </ul>
 
     <section class="top-bar-section">
+      
+      <!-- Left Nav Section -->
+      <ul class="left">
+        <li class="has-dropdown">
+          <a href="#">My Acount</a>
+          <ul class="dropdown">
+        <% if user_signed_in? %>
+          <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+          <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %> 
+        </ul>
+        </li>
+      </ul>
+
       <!-- Right Nav Section -->
       <ul class="right">
         <li class="has-dropdown">
@@ -27,16 +44,6 @@
         </li>
       </ul>
 
-      <!-- Left Nav Section -->
-      <ul class="left">
-        <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-          <% else %>
-        <li><%= link_to "Sign up", new_user_registration_path %></li>
-        <li><%= link_to "Login", new_user_session_path %></li>
-          <% end %> 
-      </ul>
-      
     </section>
   </nav>
 
