--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
         
         <h1><a href="/users">SettleUp</a></h1>
       </li>
-      <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
+      <li class="toggle-topbar menu-icon" style="color: white">Options</li>
     </ul>
 
     <section class="top-bar-section">
@@ -13,7 +13,7 @@
       <!-- Left Nav Section -->
       <ul class="left">
         <li class="has-dropdown">
-          <a href="#">My Acount</a>
+          <a href="/users">My Acount</a>
           <ul class="dropdown">
         <% if user_signed_in? %>
           <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
@@ -31,15 +31,15 @@
         <li class="has-dropdown">
           <a href="#">Contacts</a>
           <ul class="dropdown">
-            <li><a href="#">Create New</a></li>
-            <li><a href="#">View History</a></li>
+            <li><a href="/contacts/new">Create New</a></li>
+            <li><a href="/contacts">View History</a></li>
           </ul>
         </li>
         <li class="has-dropdown">
           <a href="#">IOUs</a>
           <ul class="dropdown">
-            <li><a href="#">Create New</a></li>
-            <li><a href="#">View History</a></li>
+            <li><a href="/ious/new">Create New</a></li>
+            <li><a href="/ious">View History</a></li>
           </ul>
         </li>
       </ul>
