figuring out how to grab from tables

--- a/app/views/ious/index.html.erb
+++ b/app/views/ious/index.html.erb
@@ -1,3 +1,9 @@
 <h1>These are your IOUs</h1>
 
-<%= @ious %>
+<% @ious.each do |all| %>
+  
+    <%= all.name %><br>
+    <%= all.memo %><br>
+    <%= button_to "Delete IOU", "/ious/#{all.id}", method: :delete %><br>
+
+<% end %>
