--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,16 +3,16 @@
     <ul class="title-area">
       <li class="name">
         
-        <h1><a href="#">SettleUp</a></h1>
+        <h1><a href="/users">SettleUp</a></h1>
       </li>
-      <li class="toggle-topbar menu-icon"><a href="#">Options</a></li>
+      <li class="toggle-topbar menu-icon"><a href="/users">Options</a></li>
     </ul>
 
     <section class="top-bar-section">
       <!-- Left Nav Section -->
       <ul class="left">
         <li class="has-dropdown">
-          <a href="#">My Acount</a>
+          <a href="/users">My Account</a>
           <ul class="dropdown">
         <% if user_signed_in? %>
           <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
@@ -28,14 +28,14 @@
       <!-- Right Nav Section -->
       <ul class="right">
         <li class="has-dropdown">
-          <a href="#">Contacts</a>
+          <a href="/contacts">Contacts</a>
           <ul class="dropdown">
             <li><a href="/contacts/new">Create New</a></li>
             <li><a href="/contacts">View History</a></li>
           </ul>
         </li>
         <li class="has-dropdown">
-          <a href="#">IOUs</a>
+          <a href="/ious">IOUs</a>
           <ul class="dropdown">
             <li><a href="/ious/new">Create New</a></li>
             <li><a href="/ious">View History</a></li>
