--- a/app/views/ious/new.html.erb
+++ b/app/views/ious/new.html.erb
@@ -9,8 +9,10 @@
   <%= f.text_field :status  %>
   <%= f.label "Due date" %>
   <%= f.text_field :due_date  %>
-
-    <%= f.fields_for :contacts do |builder| %>
+  <%= f.label "Payable or Receivable?" %>
+  <%= f.text_field :rec_pay  %>
+  
+    <%= f.fields_for :contact do |builder| %>
     <%= builder.label "Create new contact" %>
       <fieldset>
         <%= builder.label "First name" %>
