ious bucketed into payable and receivable

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   <h2>Total Due to Me: </h2>
   <h3>$<%= @receivable_balance %></h3>
 
-    <% @ious.each do |iou| %>
+    <% @receivable_ious.each do |iou| %>
       <%= iou.name %> <br>
       <%= iou.balance %> <br>
       <%= iou.rec_pay %> <br>
@@ -16,7 +16,7 @@
   <h2>Total I Owe: </h2>
   <h3>$<%= @payable_balance %></h3>
 
-    <% @ious.each do |iou| %>
+    <% @payable_ious.each do |iou| %>
       <%= iou.name %> <br>
       <%= iou.balance %> <br>
       <%= iou.rec_pay %> <br>
