before trying to get contacts into iou tables on account page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,11 @@
 
 <div class="small-4 columns">
   <h2>Total Due to Me: </h2>
-  <h3>$<%= @receivable_balance %></h3>
+  <h3><%= number_to_currency(@receivable_balance) %></h3>
 
     <% @receivable_ious.each do |iou| %>
       <%= iou.name %> <br>
-      <%= iou.balance %> <br>
+      $<%= iou.balance %> <br>
       <%= iou.rec_pay %> <br>
     <% end %>
   
@@ -14,7 +14,7 @@
 
 <div class="small-4 columns">
   <h2>Total I Owe: </h2>
-  <h3>$<%= @payable_balance %></h3>
+  <h3><%= number_to_currency(@payable_balance) %></h3>
 
     <% @payable_ious.each do |iou| %>
       <%= iou.name %> <br>
