--- a/app/views/ious/new.html.erb
+++ b/app/views/ious/new.html.erb
@@ -1,3 +1,6 @@
+<h2>Create an IOU</h2>
+
+<div class="small-6 columns">
 <%= form_for @iou do |f| %>
   <%= f.label "How much is owed?" %>
   <%= f.text_field :balance  %>
@@ -8,7 +11,7 @@
   <%= f.label "Due date" %>
   <%= f.text_field :due_date  %>
   <%= f.label "Payable or Receivable?" %>
-  <%= f.text_field :rec_pay  %>
+  <%= f.select :rec_pay, options_for_select([['payable', 'payable'],['receivable', 'receivable']]) %>
   
     <%= f.fields_for :contact do |builder| %>
     <%= builder.label "Create new contact" %>
@@ -27,3 +30,4 @@
 
   <%= f.submit "Create IOU" %>  
 <% end %>
+</div>
