messing with iou show page

--- a/app/views/ious/index.html.erb
+++ b/app/views/ious/index.html.erb
@@ -1,9 +1,5 @@
 <h1>These are your IOUs</h1>
 
-<% @ious.each do |all| %>
-  
-    <%= all.name %><br>
-    <%= all.memo %><br>
-    <%= button_to "Delete IOU", "/ious/#{all.id}", method: :delete %><br>
-
-<% end %>
+<div class="small-10 columns">
+  <%= render 'index_table' %>
+</div>
