--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,6 +48,8 @@
   </nav>
 
 </div>
+<div class="small-12 columns">
 <% if user_signed_in? %>
     <h5>Logged in as: <a href="/users"><%= current_user.email %></a></h5>
   <% end %>
+</div>
