--- a/app/views/ious/new.html.erb
+++ b/app/views/ious/new.html.erb
@@ -2,15 +2,14 @@
 
 <div class="small-6 columns">
 <%= form_for @iou do |f| %>
-  <%= f.label "How much is owed?" %>
+  <%= f.label "Amount" %>
   <%= f.text_field :balance  %>
-  <%= f.label :name %>
+  <%= f.label "What's the IOU for?" %>
   <%= f.text_field :name  %>
-  <%= f.label "By default this IOU is open, mark it closed when it is paid" %>
-  <%= f.text_field :status  %>
   <%= f.label "Due date" %>
   <%= f.text_field :due_date  %>
   <%= f.label "Payable or Receivable?" %>
+  <%= f.hidden_field :status, :value => "unpaid" %>
   <%= f.select :rec_pay, options_for_select([['payable', 'payable'],['receivable', 'receivable']]) %>
   
     <%= f.fields_for :contact do |builder| %>
@@ -28,6 +27,6 @@
       </fieldset>
     <% end %>
 
-  <%= f.submit "Create IOU" %>  
+  <%= f.submit "Create IOU", class: "button radius" %>  
 <% end %>
 </div>
