--- a/app/views/ious/edit.html.erb
+++ b/app/views/ious/edit.html.erb
@@ -1,6 +1,21 @@
-<h1>Edit your IOU</h1> <br>
-<h3>Your information:</h3><br>
-<%= form_for :iou, url: "/ious/#{:id}" do |f| %>
-    <%= f.text_field :name %> 
-    <%= f.submit "Submit Changes" %>
-<% end %>
+<div class="large-6 columns">
+  <h1>Edit your IOU</h1>
+    <%= form_for @iou do |f| %>
+      <%= f.label "Amount" %>
+      <%= f.text_field :balance  %>
+      
+      <%= f.label "What's the IOU for?" %>
+      <%= f.text_field :name  %>
+      
+      <%= f.label "Due date" %>
+      <%= f.text_field :due_date %>
+      
+      <%= f.label "Paid or unpaid?" %>
+      <%= f.select :rec_pay, options_for_select([['paid', 'paid'],['unpaid', 'unpaid']]) %>
+      
+      <%= f.label "Payable or Receivable?" %>
+      <%= f.select :rec_pay, options_for_select([['payable', 'payable'],['receivable', 'receivable']]) %>
+      
+      <%= f.submit "Update IOU", class: "button radius" %>
+    <% end %>
+</div>
