--- a/app/views/ious/show.html.erb
+++ b/app/views/ious/show.html.erb
@@ -8,6 +8,7 @@
       <th width="300">Name of IOU</th>
       <th width="100">Amount</th>
       <th width="50">Rec/Pay</th>
+      <th width="100">Due date</th>
       <th width="50">Paid?</th>
       <th width="50">Edit</th>
     </tr>
@@ -18,6 +19,7 @@
           <td><%= @iou.name %> </td>
           <td><%= number_to_currency(@iou.balance) %> </td>
           <td><%= @iou.rec_pay %> </td>
+          <td><%= @iou.due_date %> </td>
           <td><%= @iou.status %> </td>
           <td><%= link_to "Edit", "/ious/#{@iou.id}/edit", method: :get %> </td>
         </tr>
