--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,13 +1,4 @@
-<%= form_for @contact do |f| %>
-  <%= f.label "First Name" %>
-  <%= f.text_field :first_name  %>
-  <%= f.label "Last Name" %>
-  <%= f.text_field :last_name  %>
-  <%= f.label "Email Addresss" %>
-  <%= f.text_field :email  %>
-  <%= f.label "Phone number (optional)" %>
-  <%= f.text_field :phone  %>
-  
+<div class="large-6 columns">
+  <%= render 'form' %>
+</div>
 
-  <%= f.submit "Create Contact", class: "button radius" %>  
-<% end %>
