--- a/app/views/ious/new.html.erb
+++ b/app/views/ious/new.html.erb
@@ -1,32 +1,30 @@
 <h2>Create an IOU</h2>
 
-<div class="small-6 columns">
-<%= form_for @iou do |f| %>
-  <%= f.label "Amount" %>
-  <%= f.text_field :balance  %>
-  <%= f.label "What's the IOU for?" %>
-  <%= f.text_field :name  %>
-  <%= f.label "Due date" %>
-  <%= f.text_field :due_date  %>
-  <%= f.label "Payable or Receivable?" %>
-  <%= f.hidden_field :status, :value => "unpaid" %>
-  <%= f.select :rec_pay, options_for_select([['payable', 'payable'],['receivable', 'receivable']]) %>
-  
-    <%= f.fields_for :contact do |builder| %>
-    <%= builder.label "Create new contact" %>
-      <fieldset>
-        <%= builder.label "First name" %>
-        <%= builder.text_field :first_name %>
-        <%= builder.label "Last name" %>
-        <%= builder.text_field :last_name %>
-        <%= builder.label "Email" %>
-        <%= builder.text_field :email %>
-        <%= builder.label "Phone" %>
-        <%= builder.text_field :phone %>
-        <%= builder.hidden_field :user_id, :value => current_user.id %>
-      </fieldset>
-    <% end %>
 
-  <%= f.submit "Create IOU", class: "button radius" %>  
-<% end %>
+<div class="small-6 columns">
+  <%= form_for @iou do |f| %>
+    <%= f.label "Amount" %>
+    <%= f.text_field :balance  %>
+
+    <%= f.label "What's the IOU for?" %>
+    <%= f.text_field :name  %>
+
+    <%= f.label "Due date" %>
+    <%= f.text_field :due_date  %>
+
+    <%= f.label "Payable or Receivable?" %>
+    <%= f.select :rec_pay, options_for_select([['payable', 'payable'],['receivable', 'receivable']]) %>
+    
+
+
+    <%= f.label "Select a contact" %>
+    <%= f.collection_select(:contact_id, current_user.contacts, :id, :first_name, prompt: false) %>
+
+
+    <%= f.hidden_field :status, :value => "unpaid" %>
+    
+    <%= link_to "Create new contact", "/contacts/new", method: :get %><br><br>
+
+    <%= f.submit "Create IOU", class: "button radius" %>  
+  <% end %>
 </div>
