showing individual contact balances

--- a/app/views/ious/show.html.erb
+++ b/app/views/ious/show.html.erb
@@ -1,30 +1,7 @@
 <div class="small-8 columns">
 <h1>This IOU</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th width="175">Contact</th>
-      <th width="300">Name of IOU</th>
-      <th width="100">Amount</th>
-      <th width="50">Rec/Pay</th>
-      <th width="100">Due date</th>
-      <th width="50">Paid?</th>
-      <th width="50">Edit</th>
-    </tr>
-  </thead>
-    <tbody>
-      <tr>
-          <td><%= @iou.contact.first_name + " " +   @iou.contact.last_name %> </td>
-          <td><%= @iou.name %> </td>
-          <td><%= number_to_currency(@iou.balance) %> </td>
-          <td><%= @iou.rec_pay %> </td>
-          <td><%= @iou.due_date %> </td>
-          <td><%= @iou.status %> </td>
-          <td><%= link_to "Edit", "/ious/#{@iou.id}/edit", method: :get %> </td>
-        </tr>
-    </tbody>
-</table>  
+<%= render 'show_table' %>
   
   <% if @iou.status == "unpaid" %>
       <%= link_to "Mark paid", "/ious/#{@iou.id}/status", method: :patch, class: "button radius" %>
@@ -33,5 +10,7 @@
   <% end %>
 
   <%= link_to "Delete IOU", "/ious/#{@iou.id}", method: :delete, class: "button radius" %>
+
+  <%= link_to "View all IOUs", "/ious", method: :get, class: "button radius" %>  
   
 </div>
