--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
           <a href="/contacts">Contacts</a>
           <ul class="dropdown">
             <li><a href="/contacts/new">Create New</a></li>
-            <li><a href="/contacts">View History</a></li>
+            <li><a href="/contacts">View All</a></li>
           </ul>
         </li>
         <li class="has-dropdown">
