--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <div class="large-6 columns">
-  <h2>Total Due to You: <%= number_to_currency(@receivable_balance) %></h2>
+  <h2>Total Due to You ~<%= number_to_currency(@receivable_balance, precision: 0) %></h2>
     <%= render 'receivable_table' %>
 </div>
 
 <div class="large-6 columns">
-  <h2>Total I Owe: <%= number_to_currency(@payable_balance) %></h2>
+  <h2>Total I Owe ~<%= number_to_currency(@payable_balance, precision: 0) %></h2>
     <%= render 'payable_table' %>
 </div>  
