--- a/app/views/ious/edit.html.erb
+++ b/app/views/ious/edit.html.erb
@@ -16,6 +16,6 @@
       <%= f.label "Payable or Receivable?" %>
       <%= f.select :rec_pay, options_for_select([['payable', 'payable'],['receivable', 'receivable']]) %>
       
-      <%= f.submit "Update IOU", class: "button radius" %>
+      <%= f.submit "Update IOU", class: "button small radius" %>
     <% end %>
 </div>
