--- a/app/views/ious/new.html.erb
+++ b/app/views/ious/new.html.erb
@@ -25,6 +25,13 @@
     
     <%= link_to "Create new contact", "/contacts/new", method: :get %><br><br>
 
-    <%= f.submit "Create IOU", class: "button radius" %>  
+    <%= f.submit "Create IOU", class: "button small radius" %>  
   <% end %>
 </div>
+
+
+
+    <#%= render partial: "contacts/java" %>
+
+    <!-- <a href="#" data-reveal-id="myModal" class="button small radius">Create new contact</a> -->
+
