date picker basic

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1326,3 +1326,4 @@ $topbar-bg-color: #30597F ;
 // $topbar-arrows: true; //Set false to remove the triangle icon from the menu item
 
 @import 'foundation';
+@import 'foundation-datetimepicker';
