--- a/app/views/ious/new.html.erb
+++ b/app/views/ious/new.html.erb
@@ -4,7 +4,7 @@
 <div class="small-6 columns">
   <%= form_for @iou do |f| %>
     <%= f.label "Amount" %>
-    <%= f.text_field :balance  %>
+    <%= f.number_field :balance, step: 0.01  %>
 
     <%= f.label "What's the IOU for?" %>
     <%= f.text_field :name  %>
