--- a/app/views/users/_receivable_table.html.erb
+++ b/app/views/users/_receivable_table.html.erb
@@ -1,8 +1,9 @@
 <table>
   <thead>
     <tr>
-      <th width="175">Due from</th>
-      <th width="300">Name of IOU</th>
+      <th width="75">Created</th>
+      <th width="125">Due from</th>
+      <th width="200">Name of IOU</th>
       <th width="100">Amount</th>
       <th width="50">Paid?</th>
       <th width="25">Go</th>
@@ -11,6 +12,7 @@
   <tbody>  
     <% @receivable_ious.each do |iou| %>
     <tr>
+        <td><%= iou.created_at.strftime("%m/%d/%y") %></td>
         <td><%= iou.contact.first_name + " " +   iou.contact.last_name %> </td>
         <td><%= iou.name %> </td>
         <td><%= number_to_currency(iou.balance) %> </td>
