--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="large-6 columns">
-  <h2>Total Due to You ~<%= number_to_currency(@receivable_balance, precision: 0) %></h2>
+  <h2>Total Incoming ~<%= number_to_currency(@receivable_balance, precision: 0) %></h2>
     <%= render 'receivable_table' %>
 </div>
 
