--- a/app/views/ious/_index_table.html.erb
+++ b/app/views/ious/_index_table.html.erb
@@ -15,7 +15,7 @@
       <% @ious.order('created_at DESC','balance DESC','name').each do |iou| %>
       <tr>
           <td><%= iou.created_at.strftime("%m/%d/%y") %></td>
-          <td><%= iou.contact.first_name + " " + iou.contact.last_name %> </td>
+          <td><%= iou.contact.first_name %> </td>
           <td><%= iou.name %> </td>
           <td><%= number_to_currency(iou.balance) %> </td>
           <td><%= iou.rec_pay %> </td>
