removed last name concat from mailer

--- a/app/views/iou_mailer/new_iou_email.html.erb
+++ b/app/views/iou_mailer/new_iou_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1><%= @user.first_name + " " + @user.last_name %> has sent you an IOU! </h1>
+    <h1><%= @user.first_name %> has sent you an IOU! </h1>
     <p>
       You owe $
     </p>
