can create contact on modal from create iou page

--- a/app/views/ious/new.html.erb
+++ b/app/views/ious/new.html.erb
@@ -32,9 +32,6 @@
   <% end %>
 </div>
 
-
-
-    <!-- <#%= render partial: "contacts/java" %> -->
-
-    <!-- <a href="#" data-reveal-id="myModal" class="button small radius">Create new contact</a> -->
+    <%= render partial: "contacts/java" %>
+    <a href="#" data-reveal-id="myModal" class="button small radius">Create new contact</a>
 
